# speakshot

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/hsfl/speakshot/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/hunspell/: hunspell-lib.cpp
app/src/main/cpp/test/: test-lib.cpp
app/src/main/java/com/hsfl/: SpeakShot.java
app/src/main/java/com/hsfl/speakshot/: AppCompatPreferenceActivity.java  Constants.java  MainActivity.java  OcrDetectorProcessor.java  SettingsActivity.java
app/src/main/java/com/hsfl/speakshot/cpp/: Hunspell.java
app/src/main/java/com/hsfl/speakshot/helper/: Debouncer.java
app/src/main/java/com/hsfl/speakshot/service/: CameraImageService.java  CameraService.java
app/src/main/res/drawable/: buttons_play_stop.xml  buttons_read_result.xml  buttons_switch_guide.xml  buttons_switch_light.xml  buttons_switch_mode.xml  ic_analyze.xml  ic_simpleicons_interface_arrows_group_in_four_directions.xml  ic_simpleicons_interface_arrows_group_in_four_directions_off.xml
app/src/main/res/layout/: activity_main.xml  control_view.xml  history_fragment.xml  read_fragment.xml  read_result_fragment.xml  result_fragment.xml  search_fragment.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-w820dp/: dimens.xml
app/src/main/res/xml/: pref_appearance.xml  pref_camera.xml  pref_general.xml  pref_headers.xml
app/src/test/java/com/hsfl/speakshot/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+55 files in other folders)
